--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=Witsanu
 version=1.0.0
-author=WisanuP
+author=WisanuP (WitsanuP) https://github.com/WitsanuP
 maintainer=WitsanuP
 sentence=A library for controlling MAX7219 with Dot Matrix on Arduino Nano Shield
 paragraph=This library provides functions to control a MAX7219 display with a dot matrix using an Arduino Nano Shield. It includes methods for displaying text, numbers, triangles, and more.
