--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=A library for controlling MAX7219 with Dot Matrix on Arduino Nano Shiel
 paragraph=This library provides functions to control a MAX7219 display with a dot matrix using an Arduino Nano Shield. It includes methods for displaying text, numbers, triangles, and more.
 category=Display
 url=https://github.com/WitsanuP/WitsanuDotH
-architectures=avr
+architectures=*
 includes=Witsanu.h
